--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
   },
   "license": "0BSD",
   "dependencies": {
-    "gatsby": "^2.26.1",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
+    "gatsby": "^2.29.2",
+    "gatsby-plugin-typescript": "^2.9.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "typescript": "^4.1.3"
   }
 }
