--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
   },
   "license": "0BSD",
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.10.0",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
     "gatsby": "^2.29.2",
+    "gatsby-plugin-material-ui": "^2.1.10",
     "gatsby-plugin-typescript": "^2.9.0",
+    "mdi-material-ui": "^6.17.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "typescript": "^4.1.3"
